# spp

./: .gitignore  CMakeLists.txt  README.md
include/: diagnostics.h  error_handling.h  grayscale_transformer.h  logger.h  statistics_queue.h  task.h  time_defs.h  timing.h  video_capture.h  video_consumer.h  video_display.h  video_player.h  video_proc.h  video_process.h  video_processing.h  video_processor.h  video_source.h  video_transformer.h
include/app/: app.h
include/task/: task.h
include/ui/: ui.h
include/util/: diagnostics.h  error_handling.h  statistics.h
include/video/: grayscale_transformer.h  hsv_transformer.h  video_file.h  video_input.h  video_output.h  video_processor.h  video_source.h  video_task.h  video_transformer.h
include/video/input/: video_file.h  video_source.h  webcam.h
include/video/output/: video_output.h
include/video/processing/: bypass_transformer.h  colorspace_transformer.h  haar_cascade_classifier.h  object_detector.h
scripts/: open_diagnostics.sh  open_diagnostics_terminal.sh
src/: diagnostics.cc  diagnostics.cpp  grayscale_transformer.cc  main.cc  main.cpp  task.cc  task.cpp  video_capture.cc  video_capture.cpp  video_display.cc  video_file.cc  video_input.cc  video_output.cc  video_proc.cpp  video_process.cc  video_process.cpp  video_processing.cc  video_processor.cc  video_task.cc  webcam.cc
src/app/: app.cc
src/ui/: ui.cc
src/util/: diagnostics.cc  logger.cc
src/video/: video_file.cc  video_input.cc  video_output.cc  video_player.cc  video_processor.cc  video_task.cc
src/video/input/: video_source.cc
src/video/output/: video_output.cc
src/video/processing/: bypass_transformer.cc  colorspace_transformer.cc  grayscale_transformer.cc  haar_cascade_classifier.cc  hsv_transformer.cc  object_detector.cc
